<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/titleFragment"
            android:title="@string/inicio"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/aboutUsFragment"
            android:title="@string/about"
            android:icon="@drawable/ic_group"/>
        <item
            android:id="@+id/noticiasFragment"
            android:title="@string/noticias"
            android:icon="@drawable/ic_news"/>

        <item
            android:id="@+id/randomFragment"
            android:title="@string/randomizador"
            android:icon="@drawable/ic_help"/>
    </group>
</menu>