<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/top_margin"
            app:layout_constraintBottom_toTopOf="@id/buttonConfirmation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/textView8"
                    android:text="@string/confirmation_title"
                    style="@style/titulo" />

                <TextView
                    android:text="@string/contato_nome"
                    style="@style/question" />

                <TextView
                    android:id="@+id/text_username"
                    android:text="@string/username"
                    style="@style/texto_padrao" />

                <TextView
                    android:text="@string/contato_motivo"
                    style="@style/question" />

                <TextView
                    android:id="@+id/text_title"
                    android:text="@string/title"
                    style="@style/texto_padrao" />

                <TextView
                    android:text="@string/contato_mensagem"
                    style="@style/question" />

                <TextView
                    android:id="@+id/text_message"
                    android:text="@string/message"
                    style="@style/texto_padrao" />
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/buttonConfirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/top_margin"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/confirmation_button"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>