<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/top_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/titulo"
                    style="@style/titulo"
                    android:text="@string/praia_sobre" />
                <TextView
                    style="@style/texto_padrao"
                    android:text="@string/praia_p1"/>
                <TextView
                    style="@style/texto_padrao"
                    android:text="@string/praia_p2"/>
                <TextView
                    style="@style/texto_padrao"
                    android:text="@string/praia_p3"/>
                <TextView
                    style="@style/texto_padrao"
                    android:text="@string/praia_p4"/>
                <TextView
                    style="@style/texto_padrao"
                    android:text="@string/mais_img"/>
                <ImageView
                    style="@style/img_banner"
                    android:src="@drawable/praia_slide1" />
                <ImageView
                    style="@style/img_banner"
                    android:src="@drawable/praia_slide2" />
                <ImageView
                    style="@style/img_banner"
                    android:src="@drawable/praia_slide3" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>