<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/top_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/perfil_photo"
                    android:src="@drawable/rodolforedondo" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/titulo"
                    android:text="@string/rodolfo_name" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/texto_padrao"
                    android:text="@string/rodolfo_fun" />

                <TextView
                    android:id="@+id/textView17"
                    style="@style/question"
                    android:layout_marginTop="@dimen/triple_top_margin"
                    android:text="@string/my_sal"/>

                <TextView
                    android:id="@+id/textView13"
                    style="@style/texto_padrao"
                    android:text="@string/rodolfo_description"/>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>